# IME

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  rustfmt.toml
.github/workflows/: ci.yml
crates/ime-converter/: Cargo.toml
crates/ime-converter/benches/: allocations.rs  converter.rs
crates/ime-converter/src/: lib.rs
crates/ime-core/: Cargo.toml
crates/ime-core/benches/: engine.rs
crates/ime-core/data/: README.md  business.tsv  creative.tsv  technology.tsv
crates/ime-core/src/: domain_dictionaries.rs  english_reverse.rs  lib.rs  user_data.rs
crates/ime-core/tests/: golden.rs
crates/ime-ffi/: Cargo.toml
crates/ime-ffi/include/: ime_ffi.h
crates/ime-ffi/src/: lib.rs
crates/ime-ffi/tests/: ffi_smoke.c
crates/ime-romaji/: Cargo.toml
crates/ime-romaji/benches/: romaji.rs
crates/ime-romaji/src/: lib.rs
crates/ime-tools/: Cargo.toml
crates/ime-tools/src/: main.rs
crates/slime-converter/: Cargo.toml
crates/slime-converter/benches/: allocations.rs  converter.rs
crates/slime-converter/src/: lib.rs
docs/: benchmarking.md  dictionary-personalization-and-migration.md  evaluation.md  ime-research-and-direction.md  kana-kanji-conversion-literature-review.md  phase2-context-model-survey.md
scripts/: benchmark-macos-adapter.sh  build-devset.sh  build-macos.sh  evaluate-ajimee.sh  evaluate-dev.sh  install-macos-system.sh  install-macos.sh  preview-macos-settings.sh  select-macos-input-source.sh  test-c-ffi.sh  test-macos-adapter.sh  verify-macos-bundle.sh
