[workspace]
members = [
    "crates/ime-converter",
    "crates/ime-core",
    "crates/ime-ffi",
    "crates/ime-romaji",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "MIT OR Apache-2.0"
repository = "https://github.com/unvalley/IME"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.bench]
debug = true
lto = "thin"
codegen-units = 1
