[package]
name = "ime-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ime-converter = { path = "../ime-converter" }
ime-romaji = { path = "../ime-romaji" }

[lints]
workspace = true

[[bench]]
name = "engine"
harness = false

