[package]
name = "ime-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
ime-converter = { path = "../ime-converter" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true

[[bin]]
name = "ime-evaluate"
path = "src/main.rs"
