[package]
name = "slime-converter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bumpalo = { version = "3.20.3", features = ["collections"] }
compact_str = "0.10.0"
fst = "0.4"

[build-dependencies]
fst = "0.4"

[lints]
workspace = true

[[bench]]
name = "converter"
harness = false

[[bench]]
name = "allocations"
harness = false
